Changes for pipeline

--- a/notebooks/Spark-stream-and-save.ipynb
+++ b/notebooks/Spark-stream-and-save.ipynb
@@ -142,24 +142,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stop streaming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ssc.stop(stopSparkContext=False,stopGraceFully=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Get Cassandra table content"
    ]
   },
@@ -208,7 +190,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#stop streaming if you want\n",
+    "ssc.stop(stopSparkContext=False,stopGraceFully=True)"
+   ]
   }
  ],
  "metadata": {
